# lstar

./: .gitignore  .gitmodules  README.md  dfalearner.py  equivalencechecker.py  main.py  statemachine.py
afl/: check_reached.py  generate_reached_errors_plot.py  parse.c  patchrersafl.py  prepare_ltl_2020.sh  prepare_ltl_training_2020.sh  prepare_reachability_2020.sh  prepare_training.sh  start.sh  util.py  utils.py
angr/: test.py
cppconnector/: CMakeLists.txt  build.sh
cppconnector/src/: RERSConnectorV3.cpp  RERSConnectorV3.h  Trie.cpp  Trie.h  connector_py.cpp  subprocess.hpp  trie_py.cpp
cppconnector/test/: CMakeLists.txt  test_connector.cpp  test_trie.cpp
equivalencecheckers/: AFLequivalencechecker.py  AFLequivalencecheckerV2.py  StackedChecker.py  accseqfuzzer.py  blockcopyeqchecker.py  bruteforce.py  corpusequivalencechecker.py  entropy.py  equivalencechecker.py  genetic.py  halvingtest.py  libfuzzerequivalencechecker.py  markovequivalencechecker.py  mutationeqchecker.py  nusmv.py  randomwalk.py  wmethod.py
examples/: dfa
learners/: TTTabstractlearner.py  TTTdfalearner.py  TTTmealylearner.py  dfalearner.py  learner.py  mealylearner.py
libfuzzer/: patchrers.py  patchrerslibfuzzer.py  prepare_ltl_2019.sh  prepare_ltl_2020.sh  prepare_ltl_training_2020.sh  prepare_reachability_2019.sh  prepare_reachability_2020.sh  prepare_training.sh  start.sh  utils.py  verifier.c
rers/: check_ltl_result.py  check_result.py  ctypeswrapper.py  generate_alphabet_mapping.py  generate_solutions.py  parsetest.py  patchrers.py  patchrerslib.py  prepare.sh  verifier.c  (+11 more)
(+142 files in other folders)
